[package]
name = "synerde"
version = "0.1.0"
authors = ["Zephyr Shannon <earthlingzephyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"
syn = { version = "1.0.64", features = ["extra-traits"] }
thiserror = "1.0.24"
quote = "1.0.9"

[dev-dependencies]
serde_derive = "1.0.124"
